# esp32-zigbee

./: .gitignore  CLAUDE.md  sdkconfig  zigbee-wtw-converter.js
.agents/skills/: README.md
.github/workflows/: zigbee-build-validation.yml
deep_sleep/: sdkconfig
docs/: README.md  deep_sleep.md  zigbee-light.md  zigbee-remote.md  zigbee-wtw-converter.md  zigbee-wtw.md
docs/ai-templates/: README.md
esp-o11y/: .gitignore  AGENT.md  Dockerfile  ESP32_TELEMETRY_SERVICE_SPECIFICATION.md  build.gradle.kts  gradle.properties
esp-o11y/docs/: OPENAPI_SNAPSHOT.md  openapi-snapshot.json
esp-o11y/scripts/: update-openapi-snapshot.sh  update-openapi.sh  validate-openapi.sh
esphome-co2/: READEME.md  co2_scd40.yaml
main/: CMakeLists.txt  esp_zb_light.c  light_driver.c  light_driver.h
zigbee-co2/: CMakeLists.txt  README.md  esp32-scd40-co2-sensor.mjs  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
zigbee-light/: sdkconfig.old
zigbee-motion-light/: ARCHITECTURE.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
zigbee-remote/: CMakeLists.txt  sdkconfig  sdkconfig.old
zigbee-wtw/: .repomixignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
zigbee-wtw/main/: CMakeLists.txt  main.c  main.h
zigbee-wtw/main/gpio_control/: gpio_control.c  gpio_control.h
zigbee-wtw/main/logger/: logger.c  logger.h
zigbee-wtw/main/metrics/: metrics.c  metrics.h
zigbee-wtw/main/ota_updater/: ota_updater.c  ota_updater.h
zigbee-wtw/main/zigbee_handler/: zigbee_handler.c  zigbee_handler.h
(+165 files in other folders)
